[tool.poetry]
name = "dnd-dungeon-generator"
version = "0.1.0"
description = "A program for generating dungeons for Dungeons & Dragons"
authors = ["Veloxization <github@velo.anonaddy.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^9.0.0"
invoke = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = "^6.3"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
